Remove obsolete owner response and publication compatibility paths